<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weight_label">Weight:</string>
    <string name="miles_ran_label">Miles Ran:</string>
    <string name="calories_burned_label">Calories Burned:</string>
    <string name="height_label">Height</string>
    <string name="bmi_label">BMI</string>
    <string name="name_label">Name</string>
    <string name="weight">000</string>
    <string name="miles_ran">1</string>
    <string name="calories_burned">00.0</string>
    <string name="bmi">00</string>

    <string-array name="spinner1">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="spinner2">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
