<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wolberg.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:id="@+id/weightLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_label"
        android:id="@+id/milesranLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/MilesRanTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_label"
        android:id="@+id/caloriesburnedLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:layout_alignBottom="@+id/CaloriesBurnedNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:id="@+id/heightLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:layout_below="@+id/milesranLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label"
        android:id="@+id/bmiLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:layout_above="@+id/PersonNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:id="@+id/nameLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:layout_alignBottom="@+id/PersonNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightTextView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/caloriesburnedLabel"
        android:layout_toEndOf="@+id/caloriesburnedLabel"
        android:textSize="20sp"
        android:text="@string/weight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MilesRanTextView"
        android:textSize="20sp"
        android:text="@string/miles_ran"
        android:layout_below="@+id/weightTextView"
        android:layout_alignLeft="@+id/weightTextView"
        android:layout_alignStart="@+id/weightTextView" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MilesRanSeekBar"
        android:layout_alignBottom="@+id/MilesRanTextView"
        android:layout_toRightOf="@+id/MilesRanTextView"
        android:layout_toEndOf="@+id/MilesRanTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:indeterminate="false"
        android:max="10"
        android:progress="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/CaloriesBurnedNumber"
        android:textSize="20sp"
        android:layout_below="@+id/MilesRanSeekBar"
        android:layout_alignRight="@+id/PersonNameEditText"
        android:layout_alignEnd="@+id/PersonNameEditText"
        android:layout_alignLeft="@+id/MilesRanTextView"
        android:layout_alignStart="@+id/MilesRanTextView"
        android:text="@string/calories_burned" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_below="@+id/heightLabel"
        android:layout_alignRight="@+id/BmiTextView"
        android:layout_alignEnd="@+id/BmiTextView"
        android:entries="@array/spinner1"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/spinner1"
        android:layout_toRightOf="@+id/spinner1"
        android:layout_toEndOf="@+id/spinner1"
        android:entries="@array/spinner2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BmiTextView"
        android:textSize="20sp"
        android:text="@string/bmi"
        android:layout_above="@+id/PersonNameEditText"
        android:layout_toRightOf="@+id/MilesRanTextView"
        android:layout_toEndOf="@+id/MilesRanTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/PersonNameEditText"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/weightLabel"
        android:layout_toEndOf="@+id/weightLabel" />
</RelativeLayout>
